tests/test_exception/bad/output/ambiguous_unlabeled_exception.catala_en.A.Interpret
[ERROR] This exception can refer to several definitions. Try using labels to disambiguate

Ambiguous exception
  --> tests/test_exception/bad/ambiguous_unlabeled_exception.catala_en
   | 
10 |   definition x equals 1
   |                       
11 | 
   | 
12 |   exception
   |   ^^^^^^^^^
13 |   definition x equals 2
   |   ^^^^^^^^^^^^^^^^^^^^^^
   + Test

Candidate definition
  --> tests/test_exception/bad/ambiguous_unlabeled_exception.catala_en
   | 
10 |   definition x equals 1
   |              ^
   + Test

Candidate definition
 --> tests/test_exception/bad/ambiguous_unlabeled_exception.catala_en
  | 
8 |   definition x equals 0
  |              ^
  + Test
